--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -50,11 +50,10 @@ if [ ! -d ${GSQL_PKG_HOME}/bin ] ; then   mkdir -p ${GSQL_PKG_HOME}/bin ; fi
 #######################################################################################
 # RESTPP related stuff
 PARENT=$PWD
-cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
-make opt;
-cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+make -f MakeFilter clean
+make -f MakeFilter
+cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/*.so  ${GSQL_PKG_HOME}/bin
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
-cd  ${PARENT}
 
 make -f MakeREST
 
