--- a/src/customer/restpp_impl/filter_impl/Makefile
+++ b/src/customer/restpp_impl/filter_impl/Makefile
@@ -3,14 +3,19 @@ CFLAGS=-c -w -lstdc++ -fPIC
 LIB_NAME=filters
 LDFLAGS=-lstdc++ -shared
 RESTPP_PATH = $(GSQL_PROJ_HOME)/src/realtime/restpp
-ifneq "$(wildcard $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp )" ""
-	JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
-else
-	JSON_PATH =  $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
+ifndef GSQL_PROJ_HOME:
+	GSQL_PROJ_HOME=../../../../
 endif
-INCLUDE=-I$(JSON_PATH)/include -I$(GSQL_PROJ_HOME)/src/realtime/
+ifneq "$(wildcard $(GSQL_PROJ_HOME)/src/realtime/restpp)" ""
+	JSON_PATH = $(GSQL_PROJ_HOME)/src/third_party/jsoncpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/src/realtime
+else
+	JSON_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/third_party/jsoncpp
+	RESTPP_PATH = $(GSQL_PROJ_HOME)/gdk/gsdk/include/realtime
+endif
+INCLUDE=-I$(JSON_PATH)/include -I$(RESTPP_PATH)
 SYS_SRC=$(JSON_PATH)/json_reader.cpp $(JSON_PATH)/json_writer.cpp $(JSON_PATH)/json_value.cpp
-SOURCES=$(wildcard *.cpp) $(RESTPP_PATH)/idset.cpp $(RESTPP_PATH)/schemamanager.cpp
+SOURCES=$(wildcard *.cpp)
 OBJECTS=$(SOURCES:.cpp=.o) $(SYS_SRC:.cpp=.o)
 EXECUTABLE=$(LIB_NAME).so
 
@@ -30,4 +35,4 @@ $(EXECUTABLE): $(OBJECTS)
 
 
 clean:
-		rm -rf *.o *.so $(JSON_PATH)/json_reader.o $(JSON_PATH)/json_writer.o $(JSON_PATH)/json_value.o $(RESTPP_PATH)/idset.o $(RESTPP_PATH)/schemamanager.o
+		rm -rf *.o *.so $(GSQL_PROJ_HOME)/src/third_party/jsoncpp/json_reader.o $(GSQL_PROJ_HOME)/src/third_party/jsoncpp/json_writer.o $(GSQL_PROJ_HOME)/src/third_party/jsoncpp/json_value.o
