Squashed commit of the following:
commit d4540b97febfc155999b2802f6a671b3f8af498a
Author: like.gao <like@graphsql.com>
Date:   Wed Oct 14 18:19:04 2015 -0700

    [ER-63] gdk w/o git repos

commit 95a5c6ddbe9c632031498274eb82cb827c47b13e
Merge: ddc3957 ae01aa8
Author: Like <like@graphsql.com>
Date:   Wed Oct 14 17:58:35 2015 -0700

    Merge branch 'poc4.3_base' into poc4.3_base_cpkg

commit ddc3957060b249c1e0eaa850203497a0dfb4a8c1
Merge: 527b3ea c820462
Author: like.gao <like@graphsql.com>
Date:   Wed Oct 14 17:31:36 2015 -0700

    Merge branch 'poc4.3_base' into poc4.3_base_cpkg

commit 527b3ea7ecbc82394a834b132fd25e368934ccd7
Author: like.gao <like@graphsql.com>
Date:   Wed Oct 14 17:03:13 2015 -0700

    [ER-63] gdk w/o git repos

commit 83c9dd16682418d2687dbbd66e0175317657b30f
Author: like <like@graphsql.com>
Date:   Wed Oct 14 14:10:28 2015 -0700

    [ER-63] gdk w/o git repos

--- a/gdk/Makefile
+++ b/gdk/Makefile
@@ -1,5 +1,5 @@
 SHELL := /bin/bash
-cppFlagCmd = ../src/er/buildenv/get_cpp_flags
+cppFlagCmd = src/er/buildenv/get_cpp_flags
 ifneq ("$(wildcard $(cppFlagCmd))","")
 CFLAGS := $(shell $(cppFlagCmd) )
 else
