--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -21,21 +21,8 @@
 #----------------------------------------------------------------------------------------
 export GSQL_BUILD_SCONS="scons"
 export GSQL_BUILD_FLAGS="--CPPDEFINES=GOOGLE_DENSEHASHMAP,MULTIEDGETYPES,__STDC_FORMAT_MACROS"
-Da=$(grep CPPDEFINES= ../config/pkg.config | tail -1)
-Db=${Da/*CPPDEFINES=/}
-Dc=${Db%\\\"}
-Dd=${Dc//,/ }
-CFLAGS=
-for d in $Dd ;do CFLAGS="$CFLAGS -D$d"; done
-
-# Add version info
-productVersion=$(./gworkspace.sh -c 2>/dev/null | head -1)
-allVersion=$(< ./gsdk/VERSIONS.txt)
-otherVersion=$(echo "$allVersion" | sed -e '1d') 
-version="${productVersion}$otherVersion"
-ver=$(echo "$version" | tr "\\\n" ',') 
-
-CFLAGS="$CFLAGS \\\"-DBUILDVERSION=\\\\\\"$ver\\\\\\"\\\""
+export cppFlagCmd=src/er/buildenv/get_cpp_flags
+if [ -f $cppFlagCmd ]; then CFLAGS=$(${cppFlagCmd}); else exit 1;  fi
 export CFLAGS
 
 make -f MakeGPE clean
