--- a/.gitignore
+++ b/.gitignore
@@ -68,6 +68,8 @@ gtest/.working_dir/*
 
 # gdk generated
 deploy_gsdk/
+#cpkg generated
+cpkg/
 ################ auto generated =====
 src/olgp
 src/core/topology
