--- a/config/pkg.config
+++ b/config/pkg.config
@@ -34,7 +34,7 @@ ${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
 # ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} batchdelta_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/batchdelta ${GSQL_PKG_HOME}/bin
-# ${GSQL_BUILD_SCONS} schemaupdate_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/schemaupdate ${GSQL_PKG_HOME}/bin
+${GSQL_BUILD_SCONS} schemaupdate_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/schemaupdate ${GSQL_PKG_HOME}/bin
 
 #compile gpath
 bash src/gpath/gsql_compile_gpath.sh ${GSQL_PROJ_HOME}/src
