[RESTPP-206] enable endpoint validation in src and gdk

--- a/gdk/config/pkg.config
+++ b/gdk/config/pkg.config
@@ -37,12 +37,13 @@ if [ ! -d ${GSQL_PKG_HOME}/bin ] ; then   mkdir -p ${GSQL_PKG_HOME}/bin ; fi
 #######################################################################################
 # RESTPP related stuff
 PARENT=$PWD
+make -f MakeREST
 make -f MakeFilter clean
 make -f MakeFilter
+bin/release/check_endpoints -e ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints -s ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml -f  ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/filters.so || echo "${bldred}$0 Warning: REST++ validation failed.${txtrst}"
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/*.so  ${GSQL_PKG_HOME}/bin
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
 
-make -f MakeREST
 
 cd  ${PARENT}
 
