--- a/config/pkg.config
+++ b/config/pkg.config
@@ -30,6 +30,7 @@ ${GSQL_BUILD_SCONS} poc_gseloader_release  ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} generic_batch_loader_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} gsql_data_generator_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} poc_rest_release  ${GSQL_BUILD_FLAGS}
+${GSQL_BUILD_SCONS} check_endpoints_release ${GSQL_BUILD_FLAGS}
 ${GSQL_BUILD_SCONS} statushubcli_release ${GSQL_BUILD_FLAGS}
 # ${GSQL_BUILD_SCONS} poc_gpp_release  ${GSQL_BUILD_FLAGS};cp build/release/customer/core_impl/gpp_impl/poc_gpp_server  ${GSQL_PKG_HOME}/bin
 # ${GSQL_BUILD_SCONS} graphdump_release ${GSQL_BUILD_FLAGS};cp build/release/olgp/tools/graphdump ${GSQL_PKG_HOME}/bin
@@ -52,6 +53,7 @@ cp build/release/customer/core_impl/gpe_impl/poc_gpe_server  ${GSQL_PKG_HOME}/bi
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin
 cp build/release/core/gse/ids_worker ${GSQL_PKG_HOME}/bin/gse_dump
 cp build/release/customer/restpp_impl/poc_rest_server  ${GSQL_PKG_HOME}/bin
+cp build/release/customer/restpp_impl/check_endpoints  ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/gse_loader ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/tools/statushubcli ${GSQL_PKG_HOME}/bin
 cp build/release/olgp/gse/generic_batch_loader ${GSQL_PKG_HOME}/bin
@@ -68,6 +70,7 @@ cp -r src/gpath/libs/*.jar ${GSQL_PKG_HOME}/bin
 # RESTPP related stuff
 cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
 make opt
+${GSQL_PKG_HOME}/bin/check_endpoints -e ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints -s ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml -f  ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/filters.so || echo "${bldred}$0 Warning: REST++ validation failed.${txtrst}"
 cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
 
