[RESTPP-219] never call git clean in pkg.config

--- a/config/pkg.config
+++ b/config/pkg.config
@@ -71,7 +71,7 @@ cp -r src/gpath/libs/*.jar ${GSQL_PKG_HOME}/bin
 cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
 make opt
 ${GSQL_PKG_HOME}/bin/check_endpoints -e ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints -s ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml -f  ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/filters.so || echo "${bldred}$0 Warning: REST++ validation failed.${txtrst}"
-cp *.so  ${GSQL_PKG_HOME}/bin; git clean -f;
+cp *.so  ${GSQL_PKG_HOME}/bin; make clean
 cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
 
 
