moveing the old version visualization to www_old

--- a/src/visualization/nginx_visualization.conf
+++ b/src/visualization/nginx_visualization.conf
@@ -18,14 +18,19 @@ http {
     location / {
       root  www; 
     }
+
     location /www {
+      root  /home/shawnhuang/product/src/visualization/; 
+    }
+
+    location /www_old {
       root  /home/shawnhuang/product/src/visualization/; 
     }
 
     location /release {
       root  /home/shawnhuang/product/src/visualization/; 
     }
-
+  
     location /engine/ {
       proxy_set_header X-Real-IP $remote_addr;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
