--- a/config/pkg.config
+++ b/config/pkg.config
@@ -72,7 +72,7 @@ cd ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/; make clean;
 make opt
 ${GSQL_PKG_HOME}/bin/check_endpoints -e ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints -s ${GSQL_PROJ_HOME}/src/customer/config/graph_config.yaml -f  ${GSQL_PROJ_HOME}/src/customer/restpp_impl/filter_impl/filters.so || echo "${bldred}$0 Warning: REST++ validation failed.${txtrst}"
 cp *.so  ${GSQL_PKG_HOME}/bin; make clean
-cp ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/endpoints
+cp -rf ${GSQL_PROJ_HOME}/src/customer/restpp_impl/endpoints  ${GSQL_PKG_HOME}/config/
 
 
 mkdir -p ${GSQL_PKG_HOME}/third-party-pkgs
