--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -23,7 +23,7 @@
 # directory         repo_name    branch  TAG         build
 #- ../src/realtime   realtime    4.3     latest    src
 - ../src/er          er         4.3     latest    src
-x gsdk               local      ~      nightly   "./.gdk_fetch"
+#x gsdk               local      ~      nightly   "./.gdk_fetch"
 #x gsdk              kent       /4.3/repos nightly "./.gdk_fetch"
 #x gsdk              mtv        /4.3/repos nightly "./.gdk_fetch"
-#x gsdk              shanghai   /4.3/repos nightly "./.gdk_fetch"
+x gsdk              shanghai   /4.3/repos 0.1.2 "./.gdk_fetch"
