CIP-23, update ontology import function.

--- a/gdk/config/proj.config
+++ b/gdk/config/proj.config
@@ -26,4 +26,4 @@
 #x gsdk               local      ~      nightly   "./.gdk_fetch"
 #x gsdk              kent       /4.3/repos nightly "./.gdk_fetch"
 #x gsdk              mtv        /4.3/repos nightly "./.gdk_fetch"
-x gsdk              shanghai   /4.3/repos 0.1.2 "./.gdk_fetch"
+x gsdk              shanghai   /4.3/repos poc4.3.4_base "./.gdk_fetch"
