CIP-29 fix compile issue for graphtypeinfo in gdk

--- a/src/customer/core_impl/gpe_impl/SConscript
+++ b/src/customer/core_impl/gpe_impl/SConscript
@@ -4,6 +4,7 @@ Import('env')
 
 src_files = Split("""gperun.cpp
                      ../udt.cpp
+                     base/graphtypeinfo.cpp
                      """)
 
 gperun_server_build = env.Program(target='poc_gpe_server', 
