REM-10 ruleng installer

--- a/cip/ruleEngD/config/config.ini
+++ b/cip/ruleEngD/config/config.ini
@@ -18,9 +18,9 @@ conf:/home/feng.chen/gitrepo/product/cip/ruleEngD/config/logging.conf
 host:192.168.33.70
 port:9000
 [rest]
-get_timeout=0.1
-post_timeout=0.1
+get_timeout:0.1
+post_timeout:0.1
 [API]
-req_schema=/home/feng.chen/gitrepo/product/cip/ruleEngD/config/request_schema.json
+req_schema:/home/feng.chen/gitrepo/product/cip/ruleEngD/config/request_schema.json
 
 
