--- a/cip/ruleEngD/rulesuites/OnUserActivation/topo.yaml
+++ b/cip/ruleEngD/rulesuites/OnUserActivation/topo.yaml
@@ -1,3 +1,13 @@
+r4_operation_without_fingerprint:
+-   start
+r14_ip_query_frequency:
+-   start
+r18_imei_login_frequency:
+-   start
+r19_diff_device_login:
+-   start
+r20_gps_query_frequency:
+-   start
 r21_short_signup:
 -   start
 r24_jifeng_tuiguang_short:
@@ -10,6 +20,11 @@ r27_same_c_netsegment_user_activate:
 -   start
 
 end:
+-   r4_operation_without_fingerprint
+-   r14_ip_query_frequency
+-   r18_imei_login_frequency
+-   r19_diff_device_login
+-   r20_gps_query_frequency
 -   r21_short_signup
 -   r24_jifeng_tuiguang_short
 -   r25_same_c_netsegment_succid
