--- a/cip/cip_frontend/bower.json
+++ b/cip/cip_frontend/bower.json
@@ -27,6 +27,7 @@
     "angular-sanitize": "~1.5.0",
     "angular-messages": "~1.5.0",
     "angular-aria": "~1.5.0",
+    "angular-translate": "~2.11.0",
     "jquery": "~2.1.4",
     "moment": "~2.10.6",
     "animate.css": "~3.4.0",
