[CIP-61] Add request-promise module in package.json.

--- a/cip/cip_frontend/package.json
+++ b/cip/cip_frontend/package.json
@@ -24,7 +24,8 @@
     "express-jwt": "^3.0.0",
     "passport": "~0.3.0",
     "passport-local": "^1.0.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "request-promise": "^2.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^6.0.0",
