--- a/apps/package.json
+++ b/apps/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "~3.4.0",
+    "angular2-moment": "^1.1.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
